# diskettenlaufwerk-anmeldung-bot

./: .env  .gitignore  .sqllsrc.json  Cargo.toml  Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  main.py
.github/workflows/: bot.yml  docker.yml  scraper.yml
.sqlx/: query-035d5dc533aa3f8f52d0fbcdae6d8b8d8a7d278759a067dcd36cc6d486d477a5.json  query-1133371d9de063f90213e1e22c0e369682eb561877ce92b1b3e66fbff0617c56.json  query-16ceb9a37f6418428dae31647702c5cade7ca88b97003a7d105c2c1e6a5250b6.json  query-2ddadae9f5f80152c6ca301546b8abdd7e4bce1c9752be1ced1c5fca4668b484.json  query-44e9982c94d3eec4b26b2f1b4f74aedd00f7721a401630f4373d8bf9b2713690.json  query-4513404486e8d1866d1798a2e9d5ef654343824fd5d1b1a4bb6ffe5768be3a5b.json  query-6f77734e49f1f5a107c48efd6ea059b1e9c7397d19e9b0c017254dcc52f3dd74.json  query-721ef8ebc70d55b56b2405ffa4057883693e5ac373ba47848d87ef6e2c6391d2.json  query-7cdf905c477b36da744b69ea47ea39778a6aa8ac491238a62eae3868736d74ec.json  query-7d347d729757a2efb3e43c7be57c8367d9bdda77cdfd4cbb867bc51112255d7d.json  query-85f86e6fe570380385885ec6a10000e623dc8dbcb66e8c022368487927ac7fbb.json  query-8a8b293c1864293f5c43211ba46ed759dd0c42998fd2bb13f5dea5114fb44c75.json  query-9b1405e98a5f9358935752aa196c0497d3143c294cb94f9b4c6f1d08ad0df201.json  query-9b25f93bb8e0002fd902b580338b2739390112adae68d3e3c9736923508c5932.json  query-9b59db232b4fcdf2ef897c9dfdce5a347bd189eb1d8668a8d0609c9847100d05.json  query-9cd03df3ed1b69874afa51e0832ecd3a56ad07e1e83e1a713847692c9760863f.json  query-ac42265ced0ed64247fcefdc12db16273fa4beb959ed36eb5284a281c0f0b29d.json  query-b68dd32ee9df216742587804a0192461ff9974ebf4616222b707a18b355ce508.json  query-fac8dafdd8ce2cf0f41a14130564cbd7a7e79e916e5a6d6aeef72946ef5773f0.json  query-fd40aecf6ffcde70e855eea0992a716ac45ec22d044ff1b2103adb3a9040f5a5.json
migrations/: 0000_create_gender_enum.sql  0001_create_status_enum.sql  0002_create_participants.sql  20230712152449_create_gender_enum.sql  20230712152456_create_participant_status_enum.sql  20230712152506_create_participants_table.sql  20230712152527_create_signup_state_enum.sql  20230712153421_create_courses_table.sql  20230712153429_create_signups_table.sql  20230712153527_create_signup_state_enum.sql  20230712153629_create_signups_table.sql  20230728112706_rename_participants_column_status_related_info_to_status_info.sql  20230809095414_add_signup_participant_id_on_delete_constraint.sql  20250623094836_add_signup_always_to_participants.sql
src/: courses.rs  http.rs  main.rs  my_dialogue.rs  participant.rs  signup.rs
src/bot/: dialogue.rs  dialogue_utils.rs  keyboards.rs  message_effect.rs  mod.rs  schema.rs  text_messages.rs  utils.rs
src/bot/handlers/: callback_queries.rs  commands.rs  messages.rs  misc.rs  mod.rs
src/common/: http.rs  lib.rs
src/common/bot/: dialogue.rs  keyboards.rs  mod.rs  schema.rs  signup.rs  text_messages.rs  utils.rs
src/common/bot/handlers/: callback_queries.rs  commands.rs  messages.rs  misc.rs
src/common/models/: course.rs  mod.rs  participant.rs  signup.rs
src/models/: course.rs  gender.rs  mod.rs  participant.rs  signup.rs  status.rs
