[package]
name = "frisbee-signup"
version = "0.1.0"
edition = "2021"
default-run = "bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bot"

[[bin]]
name = "scraper"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
color-eyre = "0.6.2"
dotenv = "0.15.0"
encoding = "0.2.33"
form_urlencoded = "1.1.0"
itertools = "0.11.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.17"
scraper = "0.16.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
  "chrono",
] }
strum = { version = "0.25", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["bincode-serializer", "macros", "rustls", "redis-storage"] }
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
