[package]
name = "diskettenlaufwerk-anmeldung-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
emojis = "0.6.2"
encoding = "0.2.33"
form_urlencoded = "1.2.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
reqwest = "0.12.5"
scraper = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
  "chrono",
] }
strum = { version = "0.26.3", features = ["derive"] }
teloxide = { version = "0.16.0", features = [
  "macros",
  "rustls",
  "redis-storage",
  "bincode-serializer",
] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
